--- a/kustomize/replica/envs/mainnet-gen5/data-transport-layer.env
+++ b/kustomize/replica/envs/mainnet-gen5/data-transport-layer.env
@@ -6,7 +6,7 @@ DATA_TRANSPORT_LAYER__DEFAULT_BACKEND=l2
 DATA_TRANSPORT_LAYER__ENABLE_METRICS=true
 DATA_TRANSPORT_LAYER__ETH_NETWORK_NAME=mainnet
 DATA_TRANSPORT_LAYER__L1_GAS_PRICE_BACKEND=l2
-DATA_TRANSPORT_LAYER__L1_RPC_ENDPOINT=http://failover-proxy.default:8000
+DATA_TRANSPORT_LAYER__L1_RPC_ENDPOINT=https://eth-mainnet.alchemyapi.io/v2/JtGUhM9TFn_wAn1dVpCdfoQDxzmy1BEn
 DATA_TRANSPORT_LAYER__L2_CHAIN_ID=10
 DATA_TRANSPORT_LAYER__L2_RPC_ENDPOINT=http://sequencer.default:8545
 DATA_TRANSPORT_LAYER__LOGS_PER_POLLING_INTERVAL=2000
